--- a/Core/View/Master/PanelControllerLeftBottom.html.twig
+++ b/Core/View/Master/PanelControllerLeftBottom.html.twig
@@ -21,7 +21,7 @@
 
 {% block body %}
     <div class="container-fluid">
-        <div class="form-row">
+        <div class="row">
             <div class="col">
                 {# -- First view -- #}
                 {% set firstView = fsc.views | first %}
@@ -35,7 +35,7 @@
                 ? fsc.views[1:]|keys|first
                 : fsc.active
             %}
-            <div class="form-row">
+            <div class="row">
                 {# -- Left Panel -- #}
                 <div class="col-lg-2">
                     <div class="nav nav-pills flex-row flex-lg-column pb-3" id="mainTabs" role="tablist">
@@ -43,12 +43,12 @@
                         {% for viewName, view in fsc.views[1:] %}
                             {% set active = (viewName == activeViewName) ? ' active' : '' %}
                             {% set disable = view.settings.active ? '' : ' disabled' %}
-                                <a class="nav-link{{ active }}{{ disable }}" id="{{ viewName }}-tab" data-toggle="pill"
+                                <a class="nav-link{{ active }}{{ disable }}" id="{{ viewName }}-tab" data-bs-toggle="pill"
                                 href="#{{ viewName }}" role="tab" aria-controls="{{ viewName }}" aria-expanded="true">
-                                 <i class="{{ view.icon }} fa-fw mr-1 d-none d-xl-inline-block"
+                                 <i class="{{ view.icon }} fa-fw me-1 d-none d-xl-inline-block"
                                     aria-hidden="true"></i>{{ view.title }}
                                  {% if view.count >= 1 and viewName != firstView.getViewName() %}
-                                     <span class='badge badge-secondary mt-lg-1 mb-lg-1 float-lg-right'>{{ view.count }}</span>
+                                     <span class='badge bg-secondary mt-lg-1 mb-lg-1 float-lg-right'>{{ view.count }}</span>
                                  {% endif %}
                              </a>
                         {% endfor %}
