--- a/Core/View/Tab/AttachedFilePreview.html.twig
+++ b/Core/View/Tab/AttachedFilePreview.html.twig
@@ -4,15 +4,15 @@
 <div class="card shadow mb-3">
     <div class="card-body">
         <div class="dropdown">
-            <button class="btn btn-outline-primary dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false">
+            <button class="btn btn-outline-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="fas fa-cloud-download-alt"></i> {{ trans('download') }}
             </button>
             <div class="dropdown-menu">
                 <a class="dropdown-item" target="_blank" href="{{ asset(file.url('download')) }}">
-                    <i class="fa-regular fa-hourglass-half fa-fw mr-1"></i> {{ trans('valid-for-day') }}
+                    <i class="fa-regular fa-hourglass-half fa-fw me-1"></i> {{ trans('valid-for-day') }}
                 </a>
                 <a class="dropdown-item" target="_blank" href="{{ asset(file.url('download-permanent')) }}">
-                    <i class="fa-solid fa-circle-check fa-fw mr-1"></i> {{ trans('unlimited') }}
+                    <i class="fa-solid fa-circle-check fa-fw me-1"></i> {{ trans('unlimited') }}
                 </a>
             </div>
         </div>
