--- a/Core/View/Tab/EmailSentAttachment.html.twig
+++ b/Core/View/Tab/EmailSentAttachment.html.twig
@@ -5,12 +5,12 @@
         <div class="card-body">
             <div class="d-flex align-items-center justify-content-between">
                 <div class="d-flex align-items-center">
-                    <i class="fa-solid fa-paperclip text-secondary mr-1"></i>
+                    <i class="fa-solid fa-paperclip text-secondary me-1"></i>
                     <span class="d-inline-block text-truncate">{{ attachment.name }}</span>
                 </div>
                 <div class="d-flex align-items-center">
-                    <a href="{{ attachment.path }}" class="btn btn-sm btn-outline-primary ml-1" target="_blank" download>
-                        {{ bytes(attachment.size) }} <i class="fa-solid fa-download ml-1"></i>
+                    <a href="{{ attachment.path }}" class="btn btn-sm btn-outline-primary ms-1" target="_blank" download>
+                        {{ bytes(attachment.size) }} <i class="fa-solid fa-download ms-1"></i>
                     </a>
                 </div>
             </div>
