--- a/Core/View/Block/AccountNoteInfo.html.twig
+++ b/Core/View/Block/AccountNoteInfo.html.twig
@@ -1,26 +1,26 @@
 <h4 class="text-info">{{ trans('general-concepts') }}</h4>
-<div class="form-row">
-    <div class="col-sm-3 font-weight-bold">{{ trans('wildcard') }}</div>
+<div class="row">
+    <div class="col-sm-3 fw-bold">{{ trans('wildcard') }}</div>
     <div class="col-sm-9">{{ trans('wildcard-general-info') }}</div>
 </div>
 <h4 class="mt-4 text-info">{{ trans('wildcard-title') }}</h4>
-<div class="form-row">
-    <div class="col-sm-3 font-weight-bold">%document%</div>
+<div class="row">
+    <div class="col-sm-3 fw-bold">%document%</div>
     <div class="col-sm-9">{{ trans('document-wildcard-info') }}</div>
 </div>
-<div class="form-row">
-    <div class="col-sm-3 font-weight-bold">%date%</div>
+<div class="row">
+    <div class="col-sm-3 fw-bold">%date%</div>
     <div class="col-sm-9">{{ trans('date-wildcard-info') }}</div>
 </div>
-<div class="form-row">
-    <div class="col-sm-3 font-weight-bold">%date-entry%</div>
+<div class="row">
+    <div class="col-sm-3 fw-bold">%date-entry%</div>
     <div class="col-sm-9">{{ trans('dateentry-wildcard-info') }}</div>
 </div>
-<div class="form-row">
-    <div class="col-sm-3 font-weight-bold">%month%</div>
+<div class="row">
+    <div class="col-sm-3 fw-bold">%month%</div>
     <div class="col-sm-9">{{ trans('month-wildcard-info') }}</div>
 </div>
-<div class="form-row">
-    <div class="col-sm-3 font-weight-bold">%year%</div>
+<div class="row">
+    <div class="col-sm-3 fw-bold">%year%</div>
     <div class="col-sm-9">{{ trans('year-wildcard-info') }}</div>
 </div>
