--- a/Core/View/Macro/Forms.html.twig
+++ b/Core/View/Macro/Forms.html.twig
@@ -41,10 +41,8 @@
 
         {% if icon %}
             <div class="input-group">
-                <span class="input-group-prepend">
-                    <span class="input-group-text">
+                <span class="input-group-text">
                         <i class="{{ icon }} fa-fw" aria-hidden="true"></i>
-                    </span>
                 </span>
         {% endif %}
 
@@ -86,16 +84,14 @@
 
     {% if icon %}
         <div class="input-group">
-            <span class="input-group-prepend">
-                <span class="input-group-text">
+            <span class="input-group-text">
                     <i class="{{ icon }} fa-fw" aria-hidden="true"></i>
-                </span>
             </span>
     {% endif %}
 
         <select id="{{ id }}" name="{{ name }}"
                 {% if attributes.class is not defined %}
-                class="form-control"
+                class="form-select"
                 {% endif %}
 
                 {% for attribute,attrValue in attributes %}
