--- a/Core/View/Master/EditListView.html.twig
+++ b/Core/View/Master/EditListView.html.twig
@@ -48,8 +48,8 @@
             <input type="hidden" name="activetab" value="{{ currentView.getViewName() }}"/>
             <div class="card border-success shadow mb-2">
                 <div class="card-body p-2">
-                    <button class="btn btn-spin-action btn-sm btn-outline-success mr-1" type="button" data-toggle="collapse"
-                            data-target="#{{ formName }}Collapse" aria-expanded="false">
+                    <button class="btn btn-spin-action btn-sm btn-outline-success me-1" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#{{ formName }}Collapse" aria-expanded="false">
                         <i class="fas fa-plus-square fa-fw" aria-hidden="true"></i>
                         {{ trans('add') }}
                     </button>
@@ -57,13 +57,13 @@
                 </div>
                 <div class="collapse" id="{{ formName }}Collapse">
                     <div class="card-body border-top">
-                        <div class="form-row">
+                        <div class="row">
                             {% for group in currentView.getColumns() %}
                                 {{ group.edit(currentView.model) | raw }}
                             {% endfor %}
                         </div>
                     </div>
-                    <div class="card-footer text-right p-2">
+                    <div class="card-footer text-end p-2">
                         <button class="btn btn-spin-action btn-sm btn-success" type="submit">
                             <i class="fas fa-save fa-fw" aria-hidden="true"></i>
                             <span class="d-none d-sm-inline-block">{{ trans('save') }}</span>
@@ -92,14 +92,14 @@
             <input type="hidden" name="code" value="{{ model.primaryColumnValue() }}"/>
             <div class="card shadow mb-2"{% if currentView.selected == model.primaryColumnValue() %} id="EditListViewSelected"{% endif %}>
                 <div class="card-body">
-                    <div class="form-row">
+                    <div class="row">
                         {% for group in currentView.getColumns() %}
                             {{ group.edit(model) | raw }}
                         {% endfor %}
                     </div>
                 </div>
                 <div class="card-footer p-2">
-                    <div class="form-row">
+                    <div class="row">
                         {% if currentView.settings.btnDelete %}
                             <div class="col-auto">
                                 <button type="button" class="btn btn-spin-action btn-sm btn-danger"
