--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -119,7 +119,7 @@
                                 </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle mr-md-2" href="#" data-toggle="dropdown"
+                                <a class="nav-link dropdown-toggle mr-md-2" href="#" data-bs-toggle="dropdown"
                                    aria-haspopup="true" aria-expanded="false" id="menuIconUser"
                                    title="{{ trans('user') }}">
                                     <i class="fas fa-user-circle fa-fw" aria-hidden="true"></i>
