--- a/Core/View/Tab/RefundFacturaProveedor.html.twig
+++ b/Core/View/Tab/RefundFacturaProveedor.html.twig
@@ -47,8 +47,8 @@
                 <th>{{ trans('code') }}</th>
                 <th>{{ trans('numsupplier') }}</th>
                 <th>{{ trans('observations') }}</th>
-                <th class="text-right">{{ trans('total') }}</th>
-                <th class="text-right">{{ trans('date') }}</th>
+                <th class="text-end">{{ trans('total') }}</th>
+                <th class="text-end">{{ trans('date') }}</th>
             </tr>
             </thead>
             <tbody>
@@ -57,8 +57,8 @@
                     <td>{{ rectified.codigo }}</td>
                     <td>{{ rectified.numproveedor | raw }}</td>
                     <td>{{ rectified.observaciones | raw }}</td>
-                    <td class="text-right">{{ money(rectified.total) }}</td>
-                    <td class="text-right">{{ rectified.fecha }}</td>
+                    <td class="text-end">{{ money(rectified.total) }}</td>
+                    <td class="text-end">{{ rectified.fecha }}</td>
                 </tr>
             {% endfor %}
             </tbody>
@@ -80,11 +80,11 @@
                     </div>
                     <div class="card-body">
                         <p>{{ trans('rectified-invoice-p') }}</p>
-                        <div class="form-row align-items-end">
+                        <div class="row align-items-end">
                             <div class="col-sm">
-                                <div class="form-group">
+                                <div class="mb-3">
                                     {{ trans('serie') }}
-                                    <select name="codserie" class="form-control">
+                                    <select name="codserie" class="form-select">
                                         {% set series = fsc.series('R') %}
                                         {% if series is empty %}
                                             {% set series = fsc.series() %}
@@ -102,22 +102,22 @@
                                 </div>
                             </div>
                             <div class="col-sm">
-                                <div class="form-group">
+                                <div class="mb-3">
                                     {{ trans('date') }}
                                     <input type="date" name="fecha" value="{{ task.end | date('Y-m-d') }}"
                                            class="form-control" required>
                                 </div>
                             </div>
                             <div class="col-sm">
-                                <div class="form-group">
+                                <div class="mb-3">
                                     {{ trans('numsupplier') }}
                                     <input type="text" name="numproveedor" class="form-control" maxlength="50">
                                 </div>
                             </div>
                             <div class="col-sm">
-                                <div class="form-group">
+                                <div class="mb-3">
                                     {{ trans('status') }}
-                                    <select name="idestado" class="form-control">
+                                    <select name="idestado" class="form-select">
                                         {% for status in firstView.model.getAvailableStatus() %}
                                             {% if status.idestado is same as(22) %}
                                                 <option value="{{ status.idestado }}" selected>
@@ -132,11 +132,11 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-sm text-right">
+                            <div class="col-sm text-end">
                                 <div class="btn-group mb-3">
                                     <div class="dropdown">
                                         <button class="btn btn-secondary dropdown-toggle" type="button"
-                                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                             <i class="fas fa-check-square fa-fw"></i> {{ trans('select') }}
                                         </button>
                                         <div class="dropdown-menu dropdown-menu-right">
@@ -150,7 +150,7 @@
                                     </div>
                                 </div>
                                 <div class="btn-group mb-3">
-                                    <button type="submit" class="btn btn-spin-action btn-warning ml-3">
+                                    <button type="submit" class="btn btn-spin-action btn-warning ms-3">
                                         <i class="fas fa-save fa-fw" aria-hidden="true"></i> {{ trans('save') }}
                                     </button>
                                 </div>
@@ -162,9 +162,9 @@
                             <thead>
                             <tr>
                                 <th>{{ trans('description') }}</th>
-                                <th class="text-right">{{ trans('quantity') }}</th>
-                                <th class="text-right">{{ trans('to-refund') }}</th>
-                                <th class="text-right">{{ trans('refund-amount') }}</th>
+                                <th class="text-end">{{ trans('quantity') }}</th>
+                                <th class="text-end">{{ trans('to-refund') }}</th>
+                                <th class="text-end">{{ trans('refund-amount') }}</th>
                             </tr>
                             </thead>
                             <tbody>
@@ -175,7 +175,7 @@
                                         <a href="{{ line.getProducto().url() }}">{{ line.referencia }}</a>
                                         {{ line.descripcion | raw }}
                                     </td>
-                                    <td class="align-middle text-right">
+                                    <td class="align-middle text-end">
                                         {{ number(line.cantidad) }}
                                     </td>
                                     <td class="table-warning">
@@ -183,14 +183,14 @@
                                         {% if line.cantidad > 0 %}
                                             <input type="number" name="refund_{{ line.primaryColumnValue() }}"
                                                    value="0" min="0" max="{{ line.cantidad - refunded }}" step="any"
-                                                   class="form-control text-right to_refund" autocomplete="off"/>
+                                                   class="form-control text-end to_refund" autocomplete="off"/>
                                         {% else %}
                                             <input type="number" name="refund_{{ line.primaryColumnValue() }}"
-                                                   value="0" step="any" class="form-control text-right to_refund"
+                                                   value="0" step="any" class="form-control text-end to_refund"
                                                    autocomplete="off"/>
                                         {% endif %}
                                     </td>
-                                    <td class="align-middle table-warning text-right">
+                                    <td class="align-middle table-warning text-end">
                                         {% if refunded == 0 %}
                                             -
                                         {% else %}
@@ -203,7 +203,7 @@
                         </table>
                     </div>
                     <div class="card-body">
-                        <div class="form-group">
+                        <div class="mb-3">
                                 <textarea name="observaciones" class="form-control"
                                           placeholder="{{ trans('observations') }}"></textarea>
                         </div>
