--- a/Core/View/Tab/SalesDocument.html.twig
+++ b/Core/View/Tab/SalesDocument.html.twig
@@ -330,7 +330,7 @@
                     </div>
                   </div>
                   <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">${textClose}</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">${textClose}</button>
                     <button type="button" class="btn btn-primary" onclick="prepareForm(${callback})">${textPaid}</button>
                   </div>
                 </div>
