--- a/Core/View/Wizard-2.html.twig
+++ b/Core/View/Wizard-2.html.twig
@@ -53,23 +53,23 @@
                     </h1>
                     <p>{{ trans('wizard-p') }}</p>
                     <hr/>
-                    <div class="form-row">
+                    <div class="row">
                         <div class="col-sm-4">
-                            <div class="form-group">
+                            <div class="mb-3">
                                 {{ forms.simpleSelect('regimeniva', 'regimeniva', fsc.empresa.regimeniva,
                                     fsc.getRegimenIva(), trans('vat-regime')) }}
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="form-group">
+                            <div class="mb-3">
                                 {{ forms.simpleSelect('codimpuesto', 'codimpuesto', codimpuesto,
                                     fsc.getSelectValues('Impuesto', true), trans('default-tax')) }}
                             </div>
                         </div>
                         <div class="col-sm-4">
-                            <div class="form-group">
+                            <div class="mb-3">
                                 <label class="mb-1">{{ trans('cost-price-policy') }}</label>
-                                <select name="costpricepolicy" class="form-control">
+                                <select name="costpricepolicy" class="form-select">
                                     <option value="">------</option>
                                     <option value="last-price">{{ trans('last-purchase-price') }}</option>
                                     <option value="average-price">{{ trans('average-purchase-price') }}</option>
@@ -79,16 +79,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-row">
+                    <div class="row">
                         <div class="col-sm-auto">
-                            <div class="form-group form-check pr-3">
+                            <div class="mb-3 form-check pe-3">
                                 <input type="checkbox" name="defaultplan" value="1" id="checkboxPlan"
                                        class="form-check-input" checked/>
                                 <label for="checkboxPlan">{{ trans('load-def-acc-plan') }}</label>
                             </div>
                         </div>
                         <div class="col-sm-auto">
-                            <div class="form-group form-check pr-3">
+                            <div class="mb-3 form-check pe-3">
                                 {% if settings('default', 'ventasinstock') %}
                                     <input type="checkbox" name="ventasinstock" value="1" id="cbNoStock"
                                            class="form-check-input" checked/>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
                         <div class="col-sm-auto">
-                            <div class="form-group form-check">
+                            <div class="mb-3 form-check">
                                 {% if settings('default', 'updatesupplierprices') %}
                                     <input type="checkbox" name="updatesupplierprices" value="1"
                                            id="cbUpdateSupplierPrices" class="form-check-input" checked/>
@@ -113,7 +113,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-footer text-right">
+                <div class="card-footer text-end">
                     <button type="submit" class="btn btn-primary" id="btnWizard">
                         {{ trans('continue') }}
                     </button>
