Tarea #1272 - Actualizar a Bootstrap 5

--- a/Core/Assets/CSS/custom.css
+++ b/Core/Assets/CSS/custom.css
@@ -104,3 +104,45 @@
 .pointer {
     cursor: pointer;
 }
+
+/* migrate to bootstrap5 */
+.form-control[readonly], .form-select[readonly] {
+    background-color: #e9ecef;
+    opacity: 1;
+}
+
+.order-6 {
+    order: 6 !important;
+}
+
+.order-7 {
+    order: 7 !important;
+}
+
+.order-8 {
+    order: 8 !important;
+}
+
+.order-9 {
+    order: 9 !important;
+}
+
+.order-10 {
+    order: 10 !important;
+}
+
+.order-11 {
+    order: 11 !important;
+}
+
+.order-12 {
+    order: 12 !important;
+}
+
+a {
+    text-decoration: none;
+}
+
+.table-warning {
+    background-color: #ffeeba;
+}
